log
Sat 07 Oct 2023 09:35:44 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
f3de4c5
Sat 07 Oct 2023 11:18:32 PM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
0742acc
Sun 08 Oct 2023 12:03:45 AM UTC: 
 sudoku.c | 64 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 57 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
1e7d80b
Sun 08 Oct 2023 12:09:56 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:109:29: error: array subscript -1 is below array bounds of ‘int[9]’ [-Werror=array-bounds]
  109 |       nuevo->sudo[filaVacia][coluVacia]=numero;
      |       ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
00fae10
Sun 08 Oct 2023 12:12:55 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:110:31: error: array subscript -1 is below array bounds of ‘int[9]’ [-Werror=array-bounds]
  110 |         nuevo->sudo[filaVacia][coluVacia]=numero;
      |         ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
6e509f6
Sun 08 Oct 2023 12:16:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1c30928
Sun 08 Oct 2023 12:48:00 AM UTC: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|5
total_score: 5/70
e33d960
Sun 08 Oct 2023 12:59:33 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|5
total_score: 5/70
ccbfb1d
Sun 08 Oct 2023 01:01:38 AM UTC: 
 sudoku.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
52692e9
Sun 08 Oct 2023 01:02:12 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 5/70
5fcb574
